[gd_scene load_steps=3 format=3 uid="uid://bwkwc5q1dmldt"]

[ext_resource type="Texture2D" uid="uid://6vw2r436t5x2" path="res://tilesImg/barbTL01.png" id="1_38hu3"]
[ext_resource type="Script" path="res://addons/tiletest/Icon.gd" id="2_oj0jd"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.273
anchor_bottom = 1.0
offset_right = 0.503998
grow_horizontal = 2
grow_vertical = 2

[node name="Blk2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 281.0
offset_bottom = 537.0
color = Color(0, 0, 0, 1)

[node name="Blk" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 276.0
offset_bottom = 532.0
color = Color(0.309804, 0.309804, 0.309804, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = -35.0
offset_right = 74.0
offset_bottom = -4.0
text = "Open"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = -35.0
offset_right = 150.0
offset_bottom = -4.0
text = "list"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 276.0
offset_bottom = 532.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(266, 522)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport"]
anchor_mode = 0

[node name="Icon" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
texture = ExtResource("1_38hu3")
centered = false
offset = Vector2(16, 16)
script = ExtResource("2_oj0jd")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 637.0
offset_right = 75.0
offset_bottom = 660.0
text = "DOCK:
"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 619.0
offset_right = 59.0
offset_bottom = 642.0
text = "IMG: "

[connection signal="mouse_entered" from="SubViewportContainer" to="SubViewportContainer/SubViewport/Icon" method="_on_sub_viewport_container_mouse_entered"]
[connection signal="mouse_exited" from="SubViewportContainer" to="SubViewportContainer/SubViewport/Icon" method="_on_sub_viewport_container_mouse_exited"]
